fix: Event listener classes using deprecated attributes now use the appropriate ones